--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#">
-      <img src="/media/main-logo1.jpg" height="60px" alt="">
+      <img src="media/main-logo1.jpg" height="60px" alt="">
     </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
